메서드 JavaDoc 추가 및 로직 주석추가